	* drivers/usbhost: Sheref Younan reported an error in the error handling when
	  connection to a USB device fails.  In certain fail cases, the logic would try
	  to free the device class instance twice, the first was okay, but the second
	  caused a crash.
	* graphics/nxbe/nxbe_colormap.c: Fix error noted by Bassem Fahmy.  The function
	  nxbe_colormap was change to nxbe_configure... apparently "search-and-replace"
	  error. This error was not noticed before because most NX platforms do not use
	  colormapping.
	* arch/rgmp and configs/rgmp.  Add architecture support and build
	  configuration for RGMP.  RGMP is a project for running GPOS and
	  RTOS simultaneously on multi-processor platforms. See
	  http://rgmp.sourceforge.net/wiki/index.php/Main_Page for further
	  information about RGMP.
	* lib/stdio/lib_fclose.c: Must flush all buffered data when the file is closed.
	  Instead, it was discarding the buffered data.
	* lib/stdio: All output stream logic was modified to support CONFIG_STDIO_LINEBUFFER.
	  If standard C buffered I/O is enabled (CONFIG_STDIO_BUFFER_SIZE > 0), then this
	  option may be added to force automatic, line-oriented flushing the output buffer
	  for putc(), fputc(), putchar(), puts(), fputs(), printf(), fprintf(), and vfprintf().
	  When a newline is encountered in the output string, the output buffer will be
	  flushed.  This (slightly) increases the NuttX footprint but supports the kind of
	  behavior that people expect for printf.

6.4 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* lib/drivers/cc1101: Add initial, functional CC1101 wireless driver
	  (contributed by Uros Platise)
	* arch/mips and configs/pcblogic-pic32mx: The MicroChip PIC32MX port is now
	  code complete and ready to begin testing.
	* drivers/net/e1000.c/h: A PCI-based E1000 ethernet driver submitted
	  by Yu Qiang.
	* lib/net/lib_inetaddr.c: An implementatino of the inet_addr() function
 	 submitted y Yu Qiang.